# refurbops

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  refurbops.code-workspace
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  logging.py  main.py
backend/app/api/: deps.py  errors.py  inbound_router.py  router.py  setup_router.py
backend/app/api/middleware/: correlation_id.py  request_context.py  security_headers.py
backend/app/audit/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/auth/: authorization_service.py  password_service.py  repository.py  router.py  schemas.py  service.py  token_service.py
backend/app/bootstrap/: __init__.py  platform_owner.py
backend/app/core/: config.py  database.py
backend/app/db/: collections.py  indexes.py  mongo.py  redis.py
backend/app/models/: status.py
backend/app/repositories/: business_repository.py  inbound_order_repository.py  sync_state_repository.py  user_repository.py
backend/app/schemas/: business.py  common.py  inbound.py  setup.py
backend/app/services/: inbound_sync_service.py  setup_service.py
backend/app/shared/: result.py
backend/dev_keys/: jwt_ed25519_private.pem  jwt_ed25519_public.pem
backend/tests/: README.md  conftest.py  smoke_helpers.py  test_health.py
backend/tests/integration/: test_module_00_audit_read.py  test_module_00_auth_matrix.py  test_module_00_auth_regression.py  test_module_00_foundation_matrix.py  test_module_00_foundation_regression.py  test_module_00_frontend_auth_user_management.py  test_module_00_smoke.py
(+171 files in other folders)
