[project]
name = "refurbops-backend"
version = "0.1.0"
description = "RefurbOps backend scaffold"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "pymongo",
  "python-multipart",
  "pyjwt",
  "cryptography",
  "argon2-cffi",
  "pyotp",
  "structlog",
  "email-validator",
  "redis",
  "boto3",
  "httpx",
  "orjson",
  "ulid-py",
  "stripe==14.5.0b1",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-instrumentation-pymongo",
  "opentelemetry-instrumentation-redis",
  "starlette==1.0.0rc1",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "smoke: live backend smoke tests for Module 00 foundation and auth flows",
]

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
